fixed java classes isCorrectPackage returning false since ; were not removed. (change in kotlin support addition)